--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ Style main content
 /********
 Intro section
 ********/
-.intro{
+#intro{
     text-align:center;
 }
 
@@ -74,17 +74,17 @@ Intro section
 Quiz section
 ********/
 
-.quiz-main{
+#quiz-main{
     padding-bottom: .5em;
 }
 
-.quiz-feedback{
+#quiz-feedback{
     border-top: solid;
     border-color: lightgrey;
     padding-top: .5em;
 }
 
-.answers{
+#answers{
     display: flex;
     flex-direction: column;
     align-items:flex-start;
@@ -102,13 +102,13 @@ Quiz section
 /*****
 Init states
 *****/
-.quiz{
+#quiz{
     display: none;
 }
-.quiz-feedback{
+#quiz-feedback{
     display: none;
 }
 
-.save-score{
+#save-score{
     display: none;
 }
